# MAIR_RoCKIn

./: README.md
challenges/task1/: CMakeLists.txt  package.xml
challenges/task2/: CMakeLists.txt  package.xml
challenges/task3/: CMakeLists.txt  package.xml
common/: .help  CMakeLists.txt  package.xml
common/object_detection/: CMakeLists.txt
common/object_detection/matlab/: object_recognition_training.m
common/object_detection/src/: main_detection.cpp  main_training.cpp
documentation/: .help~
reem_mocks/: .help
scripts/: .help~
utils/: .help~  GeneralTree.h
